# gwbhj

./: .gitignore  APK开发规划.md  README.md  build.sh  build_ps.ps1  cpuinfo  system_build.prop  下一步发展.md
.github/workflows/: build.yml
apk/: gradlew.bat  settings.gradle.kts
apk/app/: build.gradle.kts  proguard-rules.pro
apk/app/src/main/: AndroidManifest.xml
apk/app/src/main/java/com/hw/security/service/: MainActivity.kt
apk/app/src/main/java/com/hw/security/service/actions/: ActionExecutor.kt  FreezeScreen.kt  JailbreakScreen.kt
apk/app/src/main/java/com/hw/security/service/auth/: AuthScreen.kt  AuthViewModel.kt  DeviceIdHelper.kt  LicenseManager.kt
apk/app/src/main/java/com/hw/security/service/crypto/: Ed25519Verifier.kt  HashGenerator.kt
apk/app/src/main/java/com/hw/security/service/data/: ClashInfo.kt  DeviceInfo.kt  License.kt
apk/app/src/main/java/com/hw/security/service/management/: FreezeListScreen.kt  FreezeListViewModel.kt  SerialManager.kt  WhitelistScreen.kt  WhitelistViewModel.kt
apk/app/src/main/res/values/: strings.xml  themes.xml
module/: action.sh  customize.sh  freeze_list.txt  service.sh  uninstall.sh  whitelist.txt
module/webroot/: index.html  script.js  style.css
server/: README.md  deploy.sh  edgeone.json  generate_keys.js  package.json  wrangler.toml
server/edge-functions/: index.js
server/functions/: [[default]].js
src/: CMakeLists.txt  atexit.cpp  ed25519.cpp  mini_json.cpp  sha256.cpp  spoof_module.cpp
src/include/: ed25519.h  mini_json.h  sha256.h  zygisk.hpp
(+15 files in other folders)
